fixed changing lightmode bg color bug on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
 }
 
 .tmp{
-    height: var(--app-height);
+    /* height: var(--app-height); */
 }
